outputs/main/hsevo-qd_cvrp_aco_2025-06-09_19-01-48/problem_iter4_response2.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/eval.py", line 11, in <module>
    import gpt
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/gpt.py", line 57
    if j == 0 and i != 0: #returning to depot
                                             ^
IndentationError: expected an indented block after 'if' statement on line 57
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/SLOC.py", line 7, in <module>
    import gpt
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/gpt.py", line 57
    if j == 0 and i != 0: #returning to depot
                                             ^
IndentationError: expected an indented block after 'if' statement on line 57
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/cyclomatic_complexity.py", line 7, in <module>
    import gpt
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/gpt.py", line 57
    if j == 0 and i != 0: #returning to depot
                                             ^
IndentationError: expected an indented block after 'if' statement on line 57
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/halstead.py", line 7, in <module>
    import gpt
  File "/home/dokhanhnam1199/QD/problems/cvrp_aco/gpt.py", line 57
    if j == 0 and i != 0: #returning to depot
                                             ^
IndentationError: expected an indented block after 'if' statement on line 57
